# aether

./: .gitmodules  CMakeLists.txt
src/: aether.c  aether.h  vendor.cpp
src/core/: core.h  event.c  event.h  fs.c  fs.h  log.h  maths.c  maths.h  strutils.c  strutils.h  types.h
src/graphics/: model.c  model.h  window.c  window.h
src/project/: asset.c  asset.h  project.c  project.h
src/project/ecs/: component.c  component.h  ecs.h  entity.c  entity.h  system.c  system.h  world.c  world.h
src/project/ecs/components/: model.c  model.h  tag.c  tag.h  transform.c  transform.h
src/project/ecs/systems/: update_transform.c  update_transform.h
src/vulkan/: context.c  context.h  descriptor.c  image.c  image.h  physical.c  pipeline.c  pipeline.h  renderpass.c  renderpass.h  swapchain.c  swapchain.h
